[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamed-keycodes"
version = "0.1.0"
description = "A package for streamed keycodes"
requires-python = ">=3.8"
authors = [
    {name = "James Lawlor"},
]
dependencies = [
    "numpy>=1.24.4",
]

[tool.setuptools]
packages = ["streamed_keycodes"]

[tool.setuptools.package-dir]
"" = "src"
